Render deployment ready: settings.py, login/logout, JWT, API_BASE_URL updated

--- a/photoapp/templates/photoapp/base.html
+++ b/photoapp/templates/photoapp/base.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" type="image/x-icon" href="{% static 'photoapp/favicon.ico' %}">
+
   <meta charset="UTF-8">
   <title>{% block title %}My Media App{% endblock %}</title>
 
