--- a/photoapp/templates/photoapp/home.html
+++ b/photoapp/templates/photoapp/home.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <h2 class="mt-5 px-2 text-center">Latest Blog Posts</h2>
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert {{ message.tags }}">{{ message }}</div>
+  {% endfor %}
+{% endif %}
 
 {% for blog in blogs %}
   <div class="border p-4 mb-4 rounded shadow">
